--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
         <div id="prawaStrona"></div>
         <div id="dol"></div>
 
-        <div id="prawo1"></div>
+        <div id="prawo1">
+            <div id="prawo12"></div>
+        </div>
+
         <div id="prawo2"></div>       
         <div id="prawo3"></div>
 
         <div id="prawo4">
-            <div id="prawo41"></div>
+            <div id="prawo42"></div>
         </div>
 
         <div id="dol2"></div>
